--- a/README.org
+++ b/README.org
@@ -265,6 +265,7 @@ Parse an Org timestamp string (which has a repeater) and format the year and mon
 
 ** Misc
 
++  ~copy-ts~ :: ~(TS)~ Return copy of timestamp struct ~TS~.
 +  ~ts-difference~ :: ~(A B)~ Return difference in seconds between timestamps ~A~ and ~B~.
 +  ~ts-fill~ :: ~(TS)~ Return ~TS~ having filled all slots from its Unix timestamp.  This is non-destructive.
 +  ~ts-now~ :: Return ~ts~ struct set to now.
