Docs: Fix :accessor-init* example

--- a/README.org
+++ b/README.org
@@ -302,7 +302,7 @@ Parse an Org timestamp string (which has a repeater) and format the year and mon
    
    ~:accessor-init~: a sexp that initializes the slot in the accessor if the slot is nil.  The symbol ~struct~ will be bound to the current struct.
    
-   ~:accessor-init*~: Like ~:accessor-init~, but defines the accessor after the struct is fully defined, so it may refer to the struct definition (e.g. by using the ~cl-defstruct~ ~pcase~ macro).
+   ~:accessor-init*~: Like ~:accessor-init~, but defines the accessor after the struct is fully defined, so it may refer to the struct definition (e.g. by using the ~cl-struct~ ~pcase~ macro).
    
    ~:aliases~: ~A~ list of symbols which will be aliased to the slot accessor, prepended with the struct name (e.g. a struct ~ts~ with slot ~year~ and alias ~y~ would create an alias ~ts-y~).
 
