--- a/README.org
+++ b/README.org
@@ -255,85 +255,85 @@ For a more interesting example, what timestamps did the previous week span?
 
 ** Accessors
 
-+  ~ts-B~ :: ~(STRUCT)~ Access slot "month-name" of ~ts~ struct ~STRUCT~.
-+  ~ts-H~ :: ~(STRUCT)~ Access slot "hour" of ~ts~ struct ~STRUCT~.
-+  ~ts-M~ :: ~(STRUCT)~ Access slot "minute" of ~ts~ struct ~STRUCT~.
-+  ~ts-S~ :: ~(STRUCT)~ Access slot "second" of ~ts~ struct ~STRUCT~.
-+  ~ts-Y~ :: ~(STRUCT)~ Access slot "year" of ~ts~ struct ~STRUCT~.
-+  ~ts-b~ :: ~(STRUCT)~ Access slot "month-abbr" of ~ts~ struct ~STRUCT~.
-+  ~ts-d~ :: ~(STRUCT)~ Access slot "day" of ~ts~ struct ~STRUCT~.
-+  ~ts-day~ :: ~(STRUCT)~ Access slot "day" of ~ts~ struct ~STRUCT~.
-+  ~ts-day-abbr~ :: ~(STRUCT)~ Access slot "day-abbr" of ~ts~ struct ~STRUCT~.
-+  ~ts-day-name~ :: ~(STRUCT)~ Access slot "day-name" of ~ts~ struct ~STRUCT~.
-+  ~ts-day-of-month-num~ :: ~(STRUCT)~ Access slot "day" of ~ts~ struct ~STRUCT~.
-+  ~ts-day-of-week-abbr~ :: ~(STRUCT)~ Access slot "day-abbr" of ~ts~ struct ~STRUCT~.
-+  ~ts-day-of-week-name~ :: ~(STRUCT)~ Access slot "day-name" of ~ts~ struct ~STRUCT~.
-+  ~ts-day-of-week-num~ :: ~(STRUCT)~ Access slot "dow" of ~ts~ struct ~STRUCT~.
-+  ~ts-day-of-year~ :: ~(STRUCT)~ Access slot "doy" of ~ts~ struct ~STRUCT~.
-+  ~ts-dom~ :: ~(STRUCT)~ Access slot "day" of ~ts~ struct ~STRUCT~.
-+  ~ts-dow~ :: ~(STRUCT)~ Access slot "dow" of ~ts~ struct ~STRUCT~.
-+  ~ts-doy~ :: ~(STRUCT)~ Access slot "doy" of ~ts~ struct ~STRUCT~.
-+  ~ts-hour~ :: ~(STRUCT)~ Access slot "hour" of ~ts~ struct ~STRUCT~.
-+  ~ts-m~ :: ~(STRUCT)~ Access slot "month" of ~ts~ struct ~STRUCT~.
-+  ~ts-min~ :: ~(STRUCT)~ Access slot "minute" of ~ts~ struct ~STRUCT~.
-+  ~ts-minute~ :: ~(STRUCT)~ Access slot "minute" of ~ts~ struct ~STRUCT~.
-+  ~ts-month~ :: ~(STRUCT)~ Access slot "month" of ~ts~ struct ~STRUCT~.
-+  ~ts-month-abbr~ :: ~(STRUCT)~ Access slot "month-abbr" of ~ts~ struct ~STRUCT~.
-+  ~ts-month-name~ :: ~(STRUCT)~ Access slot "month-name" of ~ts~ struct ~STRUCT~.
-+  ~ts-month-num~ :: ~(STRUCT)~ Access slot "month" of ~ts~ struct ~STRUCT~.
-+  ~ts-moy~ :: ~(STRUCT)~ Access slot "month" of ~ts~ struct ~STRUCT~.
-+  ~ts-sec~ :: ~(STRUCT)~ Access slot "second" of ~ts~ struct ~STRUCT~.
-+  ~ts-second~ :: ~(STRUCT)~ Access slot "second" of ~ts~ struct ~STRUCT~.
-+  ~ts-tz-abbr~ :: ~(STRUCT)~ Access slot "tz-abbr" of ~ts~ struct ~STRUCT~.
-+  ~ts-tz-offset~ :: ~(STRUCT)~ Access slot "tz-offset" of ~ts~ struct ~STRUCT~.
-+  ~ts-unix~ :: ~(STRUCT)~ Access slot "unix" of ~ts~ struct ~STRUCT~.
-+  ~ts-week~ :: ~(STRUCT)~ Access slot "woy" of ~ts~ struct ~STRUCT~.
-+  ~ts-week-of-year~ :: ~(STRUCT)~ Access slot "woy" of ~ts~ struct ~STRUCT~.
-+  ~ts-woy~ :: ~(STRUCT)~ Access slot "woy" of ~ts~ struct ~STRUCT~.
-+  ~ts-year~ :: ~(STRUCT)~ Access slot "year" of ~ts~ struct ~STRUCT~.
++  ~ts-B (STRUCT)~ :: Access slot "month-name" of ~ts~ struct ~STRUCT~.
++  ~ts-H (STRUCT)~ :: Access slot "hour" of ~ts~ struct ~STRUCT~.
++  ~ts-M (STRUCT)~ :: Access slot "minute" of ~ts~ struct ~STRUCT~.
++  ~ts-S (STRUCT)~ :: Access slot "second" of ~ts~ struct ~STRUCT~.
++  ~ts-Y (STRUCT)~ :: Access slot "year" of ~ts~ struct ~STRUCT~.
++  ~ts-b (STRUCT)~ :: Access slot "month-abbr" of ~ts~ struct ~STRUCT~.
++  ~ts-d (STRUCT)~ :: Access slot "day" of ~ts~ struct ~STRUCT~.
++  ~ts-day (STRUCT)~ :: Access slot "day" of ~ts~ struct ~STRUCT~.
++  ~ts-day-abbr (STRUCT)~ :: Access slot "day-abbr" of ~ts~ struct ~STRUCT~.
++  ~ts-day-name (STRUCT)~ :: Access slot "day-name" of ~ts~ struct ~STRUCT~.
++  ~ts-day-of-month-num (STRUCT)~ :: Access slot "day" of ~ts~ struct ~STRUCT~.
++  ~ts-day-of-week-abbr (STRUCT)~ :: Access slot "day-abbr" of ~ts~ struct ~STRUCT~.
++  ~ts-day-of-week-name (STRUCT)~ :: Access slot "day-name" of ~ts~ struct ~STRUCT~.
++  ~ts-day-of-week-num (STRUCT)~ :: Access slot "dow" of ~ts~ struct ~STRUCT~.
++  ~ts-day-of-year (STRUCT)~ :: Access slot "doy" of ~ts~ struct ~STRUCT~.
++  ~ts-dom (STRUCT)~ :: Access slot "day" of ~ts~ struct ~STRUCT~.
++  ~ts-dow (STRUCT)~ :: Access slot "dow" of ~ts~ struct ~STRUCT~.
++  ~ts-doy (STRUCT)~ :: Access slot "doy" of ~ts~ struct ~STRUCT~.
++  ~ts-hour (STRUCT)~ :: Access slot "hour" of ~ts~ struct ~STRUCT~.
++  ~ts-m (STRUCT)~ :: Access slot "month" of ~ts~ struct ~STRUCT~.
++  ~ts-min (STRUCT)~ :: Access slot "minute" of ~ts~ struct ~STRUCT~.
++  ~ts-minute (STRUCT)~ :: Access slot "minute" of ~ts~ struct ~STRUCT~.
++  ~ts-month (STRUCT)~ :: Access slot "month" of ~ts~ struct ~STRUCT~.
++  ~ts-month-abbr (STRUCT)~ :: Access slot "month-abbr" of ~ts~ struct ~STRUCT~.
++  ~ts-month-name (STRUCT)~ :: Access slot "month-name" of ~ts~ struct ~STRUCT~.
++  ~ts-month-num (STRUCT)~ :: Access slot "month" of ~ts~ struct ~STRUCT~.
++  ~ts-moy (STRUCT)~ :: Access slot "month" of ~ts~ struct ~STRUCT~.
++  ~ts-sec (STRUCT)~ :: Access slot "second" of ~ts~ struct ~STRUCT~.
++  ~ts-second (STRUCT)~ :: Access slot "second" of ~ts~ struct ~STRUCT~.
++  ~ts-tz-abbr (STRUCT)~ :: Access slot "tz-abbr" of ~ts~ struct ~STRUCT~.
++  ~ts-tz-offset (STRUCT)~ :: Access slot "tz-offset" of ~ts~ struct ~STRUCT~.
++  ~ts-unix (STRUCT)~ :: Access slot "unix" of ~ts~ struct ~STRUCT~.
++  ~ts-week (STRUCT)~ :: Access slot "woy" of ~ts~ struct ~STRUCT~.
++  ~ts-week-of-year (STRUCT)~ :: Access slot "woy" of ~ts~ struct ~STRUCT~.
++  ~ts-woy (STRUCT)~ :: Access slot "woy" of ~ts~ struct ~STRUCT~.
++  ~ts-year (STRUCT)~ :: Access slot "year" of ~ts~ struct ~STRUCT~.
 
 ** Adjustors
 
-+  ~ts-adjust~ :: ~(&rest ADJUSTMENTS)~ Return new timestamp having applied ~ADJUSTMENTS~ to ~TS~.  ~ADJUSTMENTS~ should be a series of alternating ~SLOTS~ and ~VALUES~ by which to adjust them.  For example, this form returns a new timestamp that is 47 hours into the future:
++  ~ts-adjust (&rest ADJUSTMENTS)~ :: Return new timestamp having applied ~ADJUSTMENTS~ to ~TS~.  ~ADJUSTMENTS~ should be a series of alternating ~SLOTS~ and ~VALUES~ by which to adjust them.  For example, this form returns a new timestamp that is 47 hours into the future:
    
    ~(ts-adjust ’hour -1 ’day +2 (ts-now))~
    
    Since the timestamp argument is last, it’s suitable for use in a threading macro.
-+  ~ts-dec~ :: ~(SLOT VALUE TS)~ Return a new timestamp based on ~TS~ with its ~SLOT~ decremented by ~VALUE~.  ~SLOT~ should be specified as a plain symbol, not a keyword.
-+  ~ts-inc~ :: ~(SLOT VALUE TS)~ Return a new timestamp based on ~TS~ with its ~SLOT~ incremented by ~VALUE~.  ~SLOT~ should be specified as a plain symbol, not a keyword.
-+  ~ts-update~ :: ~(TS)~ Return timestamp ~TS~ after updating its Unix timestamp from its other slots.  Non-destructive.  To be used after setting slots with, e.g. ~ts-fill~.
++  ~ts-dec (SLOT VALUE TS)~ :: Return a new timestamp based on ~TS~ with its ~SLOT~ decremented by ~VALUE~.  ~SLOT~ should be specified as a plain symbol, not a keyword.
++  ~ts-inc (SLOT VALUE TS)~ :: Return a new timestamp based on ~TS~ with its ~SLOT~ incremented by ~VALUE~.  ~SLOT~ should be specified as a plain symbol, not a keyword.
++  ~ts-update (TS)~ :: Return timestamp ~TS~ after updating its Unix timestamp from its other slots.  Non-destructive.  To be used after setting slots with, e.g. ~ts-fill~.
 
 ** Comparators
 
-+  ~ts<~ :: ~(A B)~ Return non-nil if timestamp ~A~ is less than timestamp ~B~.
-+  ~ts<=~ :: ~(A B)~ Return non-nil if timestamp ~A~ is <= timestamp ~B~.
-+  ~ts=~ :: ~(A B)~ Return non-nil if timestamp ~A~ is the same as timestamp ~B~.  Compares only the timestamps’ ~unix~ slots.  Note that a timestamp’s Unix slot is a float and may differ by less than one second, causing them to be unequal even if all of the formatted parts of the timestamp are the same.
-+  ~ts>~ :: ~(A B)~ Return non-nil if timestamp ~A~ is greater than timestamp ~B~.
-+  ~ts>=~ :: ~(A B)~ Return non-nil if timestamp ~A~ is >= timestamp ~B~.
++  ~ts< (A B)~ :: Return non-nil if timestamp ~A~ is less than timestamp ~B~.
++  ~ts<= (A B)~ :: Return non-nil if timestamp ~A~ is <= timestamp ~B~.
++  ~ts= (A B)~ :: Return non-nil if timestamp ~A~ is the same as timestamp ~B~.  Compares only the timestamps’ ~unix~ slots.  Note that a timestamp’s Unix slot is a float and may differ by less than one second, causing them to be unequal even if all of the formatted parts of the timestamp are the same.
++  ~ts> (A B)~ :: Return non-nil if timestamp ~A~ is greater than timestamp ~B~.
++  ~ts>= (A B)~ :: Return non-nil if timestamp ~A~ is >= timestamp ~B~.
 
 ** Duration
 
-+  ~ts-human-duration~ :: ~(SECONDS)~ Return plist describing duration ~SECONDS~ in years, days, hours, minutes, and seconds.  This is a simple calculation that does not account for leap years, leap seconds, etc.
-+  ~ts-human-format-duration~ :: ~(SECONDS &optional ABBREVIATE)~ Return human-formatted string describing duration ~SECONDS~.  If ~ABBREVIATE~ is non-nil, return a shorter version, without spaces.  This is a simple calculation that does not account for leap years, leap seconds, etc.
++  ~ts-human-duration (SECONDS)~ :: Return plist describing duration ~SECONDS~ in years, days, hours, minutes, and seconds.  This is a simple calculation that does not account for leap years, leap seconds, etc.
++  ~ts-human-format-duration (SECONDS &optional ABBREVIATE)~ :: Return human-formatted string describing duration ~SECONDS~.  If ~ABBREVIATE~ is non-nil, return a shorter version, without spaces.  This is a simple calculation that does not account for leap years, leap seconds, etc.
 
 ** Formatting
 
-+  ~ts-format~ :: ~(&optional TS-OR-FORMAT-STRING TS)~ Format timestamp with ~format-time-string~.  If ~TS-OR-FORMAT-STRING~ is a timestamp or nil, use the value of ~ts-default-format~.  If both ~TS-OR-FORMAT-STRING~ and ~TS~ are nil, use the current time.
++  ~ts-format (&optional TS-OR-FORMAT-STRING TS)~ :: Format timestamp with ~format-time-string~.  If ~TS-OR-FORMAT-STRING~ is a timestamp or nil, use the value of ~ts-default-format~.  If both ~TS-OR-FORMAT-STRING~ and ~TS~ are nil, use the current time.
 
 ** Parsing
 
-+  ~ts-parse~ :: ~(STRING)~ Return new ~ts~ struct, parsing ~STRING~ with ~parse-time-string~.
-+  ~ts-parse-org~ :: ~(ORG-TS-STRING)~ Return timestamp object for Org timestamp string ~ORG-TS-STRING~.  Note that function ~org-parse-time-string~ is called, which should be loaded before calling this function.
-+  ~ts-parse-org-element~ :: ~(ELEMENT)~ Return timestamp object for Org timestamp element ~ELEMENT~.  Element should be like one parsed by ~org-element~, the first element of which is ~timestamp~.  Assumes timestamp is not a range.
++  ~ts-parse (STRING)~ :: Return new ~ts~ struct, parsing ~STRING~ with ~parse-time-string~.
++  ~ts-parse-org (ORG-TS-STRING)~ :: Return timestamp object for Org timestamp string ~ORG-TS-STRING~.  Note that function ~org-parse-time-string~ is called, which should be loaded before calling this function.
++  ~ts-parse-org-element (ELEMENT)~ :: Return timestamp object for Org timestamp element ~ELEMENT~.  Element should be like one parsed by ~org-element~, the first element of which is ~timestamp~.  Assumes timestamp is not a range.
 
 ** Misc
 
-+  ~copy-ts~ :: ~(TS)~ Return copy of timestamp struct ~TS~.
-+  ~ts-difference~ :: ~(A B)~ Return difference in seconds between timestamps ~A~ and ~B~.
-+  ~ts-fill~ :: ~(TS)~ Return ~TS~ having filled all slots from its Unix timestamp.  This is non-destructive.
++  ~copy-ts (TS)~ :: Return copy of timestamp struct ~TS~.
++  ~ts-difference (A B)~ :: Return difference in seconds between timestamps ~A~ and ~B~.
++  ~ts-fill (TS)~ :: Return ~TS~ having filled all slots from its Unix timestamp.  This is non-destructive.
 +  ~ts-now~ :: Return ~ts~ struct set to now.
-+  ~ts-p~ :: ~(STRUCT)~
-+  ~ts-reset~ :: ~(TS)~ Return ~TS~ with all slots cleared except ~unix~.  Non-destructive.  The same as:
++  ~ts-p (STRUCT)~ :: 
++  ~ts-reset (TS)~ :: Return ~TS~ with all slots cleared except ~unix~.  Non-destructive.  The same as:
    
    ~(make-ts :unix (ts-unix ts))~
 
@@ -344,17 +344,17 @@ For a more interesting example, what timestamps did the previous week span?
 
 ** Adjustors
 
-+  ~ts-adjustf~ :: ~(TS &rest ADJUSTMENTS)~ Return timestamp ~TS~ having applied ~ADJUSTMENTS~.  This function is destructive, as it calls ~setf~ on ~TS~.
++  ~ts-adjustf (TS &rest ADJUSTMENTS)~ :: Return timestamp ~TS~ having applied ~ADJUSTMENTS~.  This function is destructive, as it calls ~setf~ on ~TS~.
    
    ~ADJUSTMENTS~ should be a series of alternating ~SLOTS~ and ~VALUES~ by which to adjust them.  For example, this form adjusts a timestamp to 47 hours into the future:
    
    ~(let ((ts (ts-now))) (ts-adjustf ts ’hour -1 ’day +2))~
-+  ~ts-decf~ :: ~(PLACE &optional (VALUE 1))~ Decrement timestamp ~PLACE~ by ~VALUE~ (default 1), update its Unix timestamp, and return the new value of ~PLACE~.
-+  ~ts-incf~ :: ~(PLACE &optional (VALUE 1))~ Increment timestamp ~PLACE~ by ~VALUE~ (default 1), update its Unix timestamp, and return the new value of ~PLACE~.
++  ~ts-decf (PLACE &optional (VALUE 1))~ :: Decrement timestamp ~PLACE~ by ~VALUE~ (default 1), update its Unix timestamp, and return the new value of ~PLACE~.
++  ~ts-incf (PLACE &optional (VALUE 1))~ :: Increment timestamp ~PLACE~ by ~VALUE~ (default 1), update its Unix timestamp, and return the new value of ~PLACE~.
 
 ** Misc
 
-+  ~ts-defstruct~ :: ~(&rest ARGS)~ Like ~cl-defstruct~, but with additional slot options.
++  ~ts-defstruct (&rest ARGS)~ :: Like ~cl-defstruct~, but with additional slot options.
    
    Additional slot options and values:
    
