--- a/notes.org
+++ b/notes.org
@@ -27,6 +27,73 @@ Unix timestamps, by definition, are in UTC.  We need to ensure that timezones ar
 
 Chris Wellons gave a lot of good feedback.
 
+** TODO Emacs 27.1 changes
+
+From the =NEWS= file:
+
+#+BEGIN_EXAMPLE
+  ,** Time values
+
+  +++
+  ,*** New function time 'time-convert' converts Lisp time values
+  to Lisp timestamps of various forms, including a new timestamp form
+  (TICKS . HZ) where TICKS is an integer and HZ a positive integer
+  denoting a clock frequency.
+
+  +++
+  ,*** Although the default timestamp format is still '(HI LO US PS)',
+  it is planned to change in a future Emacs version, to exploit bignums.
+  The documentation has been updated to mention that the timestamp
+  format may change and that programs should use functions like
+  'format-time-string', 'decode-time', and 'time-convert' rather than
+  probing the innards of a timestamp directly, or creating a timestamp
+  by hand.
+
+  +++
+  ,*** 'encode-time' supports a new API '(encode-time TIME)'.
+  The old 'encode-time' API is still supported.
+
+  +++
+  ,*** A new package to parse ISO 8601 time, date, durations and
+  intervals has been added.  The main function to use is
+  'iso8601-parse', but there's also 'iso8601-parse-date',
+  'iso8601-parse-time', 'iso8601-parse-duration' and
+  'iso8601-parse-interval'.  All these functions return decoded time
+  structures, except the final one, which returns three of them (start,
+  end and duration).
+
+  +++
+  ,*** 'time-add', 'time-subtract', and 'time-less-p' now accept
+  infinities and NaNs too, and propagate them or return nil like
+  floating-point operators do.
+
+  +++
+  ,*** New function 'time-equal-p' compares time values for equality.
+
+  +++
+  ,*** 'format-time-string' supports a new conversion specifier flag '+'
+  that acts like the '0' flag but also puts a '+' before nonnegative
+  years containing more than four digits.  This is for compatibility
+  with POSIX.1-2017.
+
+  +++
+  ,*** To access (or alter) the elements a decoded time value, the
+  'decoded-time-second', 'decoded-time-minute', 'decoded-time-hour',
+  'decoded-time-day', 'decoded-time-month', 'decoded-time-year',
+  'decoded-time-weekday', 'decoded-time-dst' and 'decoded-time-zone'
+  accessors can be used.
+
+  ,*** The new functions 'date-days-in-month' (which will say how many
+  days there are in a month in a specific year), 'date-ordinal-to-time'
+  (that computes the date of an ordinal day), 'decoded-time-add' for
+  doing computations on a decoded time structure), 'make-decoded-time'
+  (for making a decoded time structure with only the given keywords
+  filled out), and 'encoded-time-set-defaults' (which fills in nil
+  elements as if it's midnight January 1st, 1970) have been added.
+#+END_EXAMPLE
+
+Some of those may be useful.
+
 * Ideas
 
 ** Inc/dec until
